--- a/todos.html
+++ b/todos.html
@@ -12,7 +12,7 @@
     <ul id="todoList"></ul>
     <form action="#dos" id="addToDosForm">
         <label for="task">Task: </label>
-        <input type="text" name="task" id="task">
+        <input type="text" name="task" id="task" placeholder="Enter your task">
         <input type="submit" value="Add Todo">
         <script src="todos.js"></script>
     </form>
